// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration test for preview command > runs version and publish for js and rust 1`] = `
{
  "commandsRan": {
    "package-a": {
      "command": true,
      "pkg": {
        "command": [
          "node -e "fs.appendFileSync('../log.txt', 'publishing --tag  would happen here\\\\n')"",
        ],
        "dependencies": [
          "package-b",
        ],
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./package-a",
        "pkg": "package-a",
        "pkgFile": {
          "currentVersion": "0.0.1-branch-name.12345",
          "deps": {
            "package-b": [
              {
                "type": "dependencies",
                "version": "0.0.1-branch-name.12345",
              },
            ],
          },
          "file": {
            "content": "{
  "name": "package-a",
  "version": "0.0.1-branch-name.12345",
  "dependencies": {
    "package-b": "0.0.1-branch-name.12345"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "package-a/package.json",
          },
          "name": "package-a",
          "pkg": {
            "dependencies": {
              "package-b": "0.0.1-branch-name.12345",
            },
            "name": "package-a",
            "version": "0.0.1-branch-name.12345",
          },
          "version": "0.0.1-branch-name.12345",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 1,
          "versionPrerelease": [
            "branch-name",
            12345,
          ],
        },
        "postcommand": [
          "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-a would happen here\\\\n')"",
        ],
        "precommand": [
          "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-a would happen here\\\\n')"",
        ],
        "releaseTag": "package-a-v0.0.1-branch-name.12345",
      },
      "postcommand": false,
      "precommand": true,
      "published": true,
    },
    "package-b": {
      "command": true,
      "pkg": {
        "command": [
          "node -e "fs.appendFileSync('../log.txt', 'publishing --tag  would happen here\\\\n')"",
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./package-b",
        "pkg": "package-b",
        "pkgFile": {
          "currentVersion": "0.0.1-branch-name.12345",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-b",
  "version": "0.0.1-branch-name.12345",
  "dependencies": {}
}
",
            "extname": ".json",
            "filename": "package",
            "path": "package-b/package.json",
          },
          "name": "package-b",
          "pkg": {
            "dependencies": {},
            "name": "package-b",
            "version": "0.0.1-branch-name.12345",
          },
          "version": "0.0.1-branch-name.12345",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 1,
          "versionPrerelease": [
            "branch-name",
            12345,
          ],
        },
        "postcommand": [
          "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-b would happen here\\\\n')"",
        ],
        "precommand": [
          "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-b would happen here\\\\n')"",
        ],
        "releaseTag": "package-b-v0.0.1-branch-name.12345",
      },
      "postcommand": false,
      "precommand": true,
      "published": true,
    },
    "package-c": {
      "command": true,
      "pkg": {
        "command": [
          "node -e "fs.appendFileSync('../log.txt', 'publishing would happen here\\\\n')"",
        ],
        "dependencies": [
          "package-b",
        ],
        "errorOnVersionRange": null,
        "manager": "rust",
        "path": "./package-c",
        "pkg": "package-c",
        "pkgFile": {
          "currentVersion": "0.0.1-branch-name.12345",
          "deps": {
            "package-b": [
              {
                "type": "dependencies",
                "version": "0.0.1-branch-name.12345",
              },
            ],
          },
          "file": {
            "content": "[package]
name = "package-c"
version = "0.0.1-branch-name.12345"

[dependencies]
package-b = "0.0.1-branch-name.12345"
",
            "extname": ".toml",
            "filename": "Cargo",
            "path": "package-c/Cargo.toml",
          },
          "name": "package-c",
          "pkg": TomlDocument {},
          "version": "0.0.1-branch-name.12345",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 1,
          "versionPrerelease": [
            "branch-name",
            12345,
          ],
        },
        "postcommand": [
          "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-c would happen here\\\\n')"",
        ],
        "precommand": [
          "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-c would happen here\\\\n')"",
        ],
        "releaseTag": "package-c-v0.0.1-branch-name.12345",
      },
      "postcommand": false,
      "precommand": true,
      "published": true,
    },
  },
  "pipeTemplate": [
    {
      "command": [
        "node -e "fs.appendFileSync('../log.txt', 'publishing --tag  would happen here\\\\n')"",
      ],
      "dependencies": [
        "package-b",
      ],
      "errorOnVersionRange": null,
      "manager": "javascript",
      "path": "./package-a",
      "pkg": "package-a",
      "pkgFile": {
        "currentVersion": "0.0.1-branch-name.12345",
        "deps": {
          "package-b": [
            {
              "type": "dependencies",
              "version": "0.0.1-branch-name.12345",
            },
          ],
        },
        "file": {
          "content": "{
  "name": "package-a",
  "version": "0.0.1-branch-name.12345",
  "dependencies": {
    "package-b": "0.0.1-branch-name.12345"
  }
}
",
          "extname": ".json",
          "filename": "package",
          "path": "package-a/package.json",
        },
        "name": "package-a",
        "pkg": {
          "dependencies": {
            "package-b": "0.0.1-branch-name.12345",
          },
          "name": "package-a",
          "version": "0.0.1-branch-name.12345",
        },
        "version": "0.0.1-branch-name.12345",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 1,
        "versionPrerelease": [
          "branch-name",
          12345,
        ],
      },
      "postcommand": [
        "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-a would happen here\\\\n')"",
      ],
      "precommand": [
        "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-a would happen here\\\\n')"",
      ],
      "releaseTag": "package-a-v0.0.1-branch-name.12345",
    },
    {
      "command": [
        "node -e "fs.appendFileSync('../log.txt', 'publishing --tag  would happen here\\\\n')"",
      ],
      "dependencies": undefined,
      "errorOnVersionRange": null,
      "manager": "javascript",
      "path": "./package-b",
      "pkg": "package-b",
      "pkgFile": {
        "currentVersion": "0.0.1-branch-name.12345",
        "deps": {},
        "file": {
          "content": "{
  "name": "package-b",
  "version": "0.0.1-branch-name.12345",
  "dependencies": {}
}
",
          "extname": ".json",
          "filename": "package",
          "path": "package-b/package.json",
        },
        "name": "package-b",
        "pkg": {
          "dependencies": {},
          "name": "package-b",
          "version": "0.0.1-branch-name.12345",
        },
        "version": "0.0.1-branch-name.12345",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 1,
        "versionPrerelease": [
          "branch-name",
          12345,
        ],
      },
      "postcommand": [
        "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-b would happen here\\\\n')"",
      ],
      "precommand": [
        "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-b would happen here\\\\n')"",
      ],
      "releaseTag": "package-b-v0.0.1-branch-name.12345",
    },
    {
      "command": [
        "node -e "fs.appendFileSync('../log.txt', 'publishing would happen here\\\\n')"",
      ],
      "dependencies": [
        "package-b",
      ],
      "errorOnVersionRange": null,
      "manager": "rust",
      "path": "./package-c",
      "pkg": "package-c",
      "pkgFile": {
        "currentVersion": "0.0.1-branch-name.12345",
        "deps": {
          "package-b": [
            {
              "type": "dependencies",
              "version": "0.0.1-branch-name.12345",
            },
          ],
        },
        "file": {
          "content": "[package]
name = "package-c"
version = "0.0.1-branch-name.12345"

[dependencies]
package-b = "0.0.1-branch-name.12345"
",
          "extname": ".toml",
          "filename": "Cargo",
          "path": "package-c/Cargo.toml",
        },
        "name": "package-c",
        "pkg": TomlDocument {},
        "version": "0.0.1-branch-name.12345",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 1,
        "versionPrerelease": [
          "branch-name",
          12345,
        ],
      },
      "postcommand": [
        "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-c would happen here\\\\n')"",
      ],
      "precommand": [
        "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-c would happen here\\\\n')"",
      ],
      "releaseTag": "package-c-v0.0.1-branch-name.12345",
    },
  ],
}
`;

exports[`integration test for preview command with dist tags > runs version and publish for js and rust 1`] = `
{
  "commandsRan": {
    "package-a": {
      "command": true,
      "pkg": {
        "command": [
          "node -e "fs.appendFileSync('../log.txt', 'publishing would happen here\\\\n')"",
        ],
        "dependencies": [
          "package-b",
        ],
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./package-a",
        "pkg": "package-a",
        "pkgFile": {
          "currentVersion": "0.0.1-branch-name.12345",
          "deps": {
            "package-b": [
              {
                "type": "dependencies",
                "version": "0.0.1-branch-name.12345",
              },
            ],
          },
          "file": {
            "content": "{
  "name": "package-a",
  "version": "0.0.1-branch-name.12345",
  "dependencies": {
    "package-b": "0.0.1-branch-name.12345"
  }
}
",
            "extname": ".json",
            "filename": "package",
            "path": "package-a/package.json",
          },
          "name": "package-a",
          "pkg": {
            "dependencies": {
              "package-b": "0.0.1-branch-name.12345",
            },
            "name": "package-a",
            "version": "0.0.1-branch-name.12345",
          },
          "version": "0.0.1-branch-name.12345",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 1,
          "versionPrerelease": [
            "branch-name",
            12345,
          ],
        },
        "postcommand": [
          "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-a would happen here\\\\n')"",
        ],
        "precommand": [
          "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-a would happen here\\\\n')"",
        ],
        "releaseTag": "package-a-v0.0.1-branch-name.12345",
      },
      "postcommand": false,
      "precommand": true,
      "published": true,
    },
    "package-b": {
      "command": true,
      "pkg": {
        "command": [
          "node -e "fs.appendFileSync('../log.txt', 'publishing would happen here\\\\n')"",
        ],
        "dependencies": undefined,
        "errorOnVersionRange": null,
        "manager": "javascript",
        "path": "./package-b",
        "pkg": "package-b",
        "pkgFile": {
          "currentVersion": "0.0.1-branch-name.12345",
          "deps": {},
          "file": {
            "content": "{
  "name": "package-b",
  "version": "0.0.1-branch-name.12345",
  "dependencies": {}
}
",
            "extname": ".json",
            "filename": "package",
            "path": "package-b/package.json",
          },
          "name": "package-b",
          "pkg": {
            "dependencies": {},
            "name": "package-b",
            "version": "0.0.1-branch-name.12345",
          },
          "version": "0.0.1-branch-name.12345",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 1,
          "versionPrerelease": [
            "branch-name",
            12345,
          ],
        },
        "postcommand": [
          "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-b would happen here\\\\n')"",
        ],
        "precommand": [
          "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-b would happen here\\\\n')"",
        ],
        "releaseTag": "package-b-v0.0.1-branch-name.12345",
      },
      "postcommand": false,
      "precommand": true,
      "published": true,
    },
    "package-c": {
      "command": true,
      "pkg": {
        "command": [
          "node -e "fs.appendFileSync('../log.txt', 'publishing --tag branch_name would happen here\\\\n')"",
        ],
        "dependencies": [
          "package-b",
        ],
        "errorOnVersionRange": null,
        "manager": "rust",
        "path": "./package-c",
        "pkg": "package-c",
        "pkgFile": {
          "currentVersion": "0.0.1-branch-name.12345",
          "deps": {
            "package-b": [
              {
                "type": "dependencies",
                "version": "0.0.1-branch-name.12345",
              },
            ],
          },
          "file": {
            "content": "[package]
name = "package-c"
version = "0.0.1-branch-name.12345"

[dependencies]
package-b = "0.0.1-branch-name.12345"
",
            "extname": ".toml",
            "filename": "Cargo",
            "path": "package-c/Cargo.toml",
          },
          "name": "package-c",
          "pkg": TomlDocument {},
          "version": "0.0.1-branch-name.12345",
          "versionMajor": 0,
          "versionMinor": 0,
          "versionPatch": 1,
          "versionPrerelease": [
            "branch-name",
            12345,
          ],
        },
        "postcommand": [
          "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-c would happen here\\\\n')"",
        ],
        "precommand": [
          "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-c would happen here\\\\n')"",
        ],
        "releaseTag": "package-c-v0.0.1-branch-name.12345",
      },
      "postcommand": false,
      "precommand": true,
      "published": true,
    },
  },
  "pipeTemplate": [
    {
      "command": [
        "node -e "fs.appendFileSync('../log.txt', 'publishing would happen here\\\\n')"",
      ],
      "dependencies": [
        "package-b",
      ],
      "errorOnVersionRange": null,
      "manager": "javascript",
      "path": "./package-a",
      "pkg": "package-a",
      "pkgFile": {
        "currentVersion": "0.0.1-branch-name.12345",
        "deps": {
          "package-b": [
            {
              "type": "dependencies",
              "version": "0.0.1-branch-name.12345",
            },
          ],
        },
        "file": {
          "content": "{
  "name": "package-a",
  "version": "0.0.1-branch-name.12345",
  "dependencies": {
    "package-b": "0.0.1-branch-name.12345"
  }
}
",
          "extname": ".json",
          "filename": "package",
          "path": "package-a/package.json",
        },
        "name": "package-a",
        "pkg": {
          "dependencies": {
            "package-b": "0.0.1-branch-name.12345",
          },
          "name": "package-a",
          "version": "0.0.1-branch-name.12345",
        },
        "version": "0.0.1-branch-name.12345",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 1,
        "versionPrerelease": [
          "branch-name",
          12345,
        ],
      },
      "postcommand": [
        "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-a would happen here\\\\n')"",
      ],
      "precommand": [
        "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-a would happen here\\\\n')"",
      ],
      "releaseTag": "package-a-v0.0.1-branch-name.12345",
    },
    {
      "command": [
        "node -e "fs.appendFileSync('../log.txt', 'publishing would happen here\\\\n')"",
      ],
      "dependencies": undefined,
      "errorOnVersionRange": null,
      "manager": "javascript",
      "path": "./package-b",
      "pkg": "package-b",
      "pkgFile": {
        "currentVersion": "0.0.1-branch-name.12345",
        "deps": {},
        "file": {
          "content": "{
  "name": "package-b",
  "version": "0.0.1-branch-name.12345",
  "dependencies": {}
}
",
          "extname": ".json",
          "filename": "package",
          "path": "package-b/package.json",
        },
        "name": "package-b",
        "pkg": {
          "dependencies": {},
          "name": "package-b",
          "version": "0.0.1-branch-name.12345",
        },
        "version": "0.0.1-branch-name.12345",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 1,
        "versionPrerelease": [
          "branch-name",
          12345,
        ],
      },
      "postcommand": [
        "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-b would happen here\\\\n')"",
      ],
      "precommand": [
        "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-b would happen here\\\\n')"",
      ],
      "releaseTag": "package-b-v0.0.1-branch-name.12345",
    },
    {
      "command": [
        "node -e "fs.appendFileSync('../log.txt', 'publishing --tag branch_name would happen here\\\\n')"",
      ],
      "dependencies": [
        "package-b",
      ],
      "errorOnVersionRange": null,
      "manager": "rust",
      "path": "./package-c",
      "pkg": "package-c",
      "pkgFile": {
        "currentVersion": "0.0.1-branch-name.12345",
        "deps": {
          "package-b": [
            {
              "type": "dependencies",
              "version": "0.0.1-branch-name.12345",
            },
          ],
        },
        "file": {
          "content": "[package]
name = "package-c"
version = "0.0.1-branch-name.12345"

[dependencies]
package-b = "0.0.1-branch-name.12345"
",
          "extname": ".toml",
          "filename": "Cargo",
          "path": "package-c/Cargo.toml",
        },
        "name": "package-c",
        "pkg": TomlDocument {},
        "version": "0.0.1-branch-name.12345",
        "versionMajor": 0,
        "versionMinor": 0,
        "versionPatch": 1,
        "versionPrerelease": [
          "branch-name",
          12345,
        ],
      },
      "postcommand": [
        "node -e "fs.appendFileSync('../log.txt', 'postpublishing package-c would happen here\\\\n')"",
      ],
      "precommand": [
        "node -e "fs.appendFileSync('../log.txt', 'prepublishing package-c would happen here\\\\n')"",
      ],
      "releaseTag": "package-c-v0.0.1-branch-name.12345",
    },
  ],
}
`;
